tests/tests/errors/error-status-code.js
// error status code

const express = require("express");
const { fetchTest } = require("../../utils");

const app = express();
app.set('env', 'production');

app.get('/test', (req, res) => {
    res.status(400);
    throw new Error('test');
});

app.listen(13333, async () => {
    console.log('Server is running on port 13333');

    const response = await fetchTest('http://localhost:13333/test');
    console.log(response.status, await response.text());
    process.exit(0);
});